--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	</organization>
 	
 	<properties>
-		<virtscreen.version>0.4.11</virtscreen.version>
+		<virtscreen.version>0.5</virtscreen.version>
 		<cellml.version>0.2.2</cellml.version>
 		<grix.version>1.3.4</grix.version>
 		<blender.version>0.3.3.1.1</blender.version>
@@ -238,6 +238,43 @@
 		</plugins>
 
 
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo.webstart
+										</groupId>
+										<artifactId>
+											webstart-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.0-beta-1,)
+										</versionRange>
+										<goals>
+											<goal>
+												jnlp-download-servlet
+											</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 
